<resources>
    <string name="app_name">TaskyApp</string>
    <string name="action_settings">Settings</string>
    <string name="permission_storage_denied">If you want to add a photo to this spot we need permission to access your external storage.</string>
    <string name="permission_call_denied">If you want to use this shortcut, you have to grant us permission to call this number.</string>
    <string name="permission_location_denied">This app works best for you if location services are enabled. If you cannot provide us access to location we won\'t be able to serve you accurate data.</string>
    <string name="permission_sensor_denied">This app works best for you if required sensors are enabled. If you cannot provide us access to those sensors we won\'t be able to serve you accurate data.</string>
    <string name="permission_forever_denied">You denied us access to the permissions.</string>
    <string name="permission_grant_all">Please grant us permissions to get as accurate data as possible.</string>
    <string name="permission_location_forever_denied">Cannot access your location. Please grant us permissions.</string>
    <string name="permission_accounts_denied">We need access to your profile mail address to log you in.</string>
    <string name="ok">OK</string>
    <string name="difficulty_prompt">Choose task difficulty</string>
    <string name="task_difficulty_not_selected">Select your task difficulty first.</string>
    <string name="label">Label</string>
    <string name="discard">Discard</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="detected_phone_activity">Detected phone activity:</string>
    <string name="no_data">no data</string>
    <string name="action_about">About</string>
    <string name="about_app_body">TaskyApp is developed solely for research purpose and is part of master thesis <b>Mobile Sensing for Task Engagement Inferences</b>. \nWith use of this app you are helping us out to collect data, which will be later used for machine learning on server. The goal of the research is trying to classify difficulty of users\' tasks only with phone\'s built-in sensors.</string>
    <string name="about_app_title">About TaskyApp</string>
    <string name="author_title">Author</string>
    <string name="about_author_description">App was developed by <b>Gašper Urh</b>, student at Faculty of Computer and Information Science, University of Ljubljana, supervised by <b>doc. dr. Veljko Pejović</b>.</string>
    <string-array name="task_difficulties_array">
        <item></item>
        <item>Very easy</item>
        <item>Pretty easy</item>
        <item>Neither easy nor hard</item>
        <item>Pretty hard</item>
        <item>Very hard</item>
    </string-array>
    <string-array name="task_difficulties_description_array">
        <item></item>
        <item>Boring, I could still actively use my phone.</item>
        <item>I have enough time to open notification.</item>
        <item>Notifications will interrupt me, but I can read them.</item>
        <item>I need to concentrate on the task.</item>
        <item>Very busy, please don\'t interrupt!</item>
    </string-array>
    <string-array name="notification_contents_array">
        <item>How busy are you right now?</item>
        <item>Tell us about task difficulty.</item>
        <item>Remember, you can win a 50€ voucher!</item>
        <item>We have sensed your task. Please label it.</item>
    </string-array>
    <string name="title_activity_sensing">SensingActivity</string>
    <string name="detected_ambient_sound">Detected ambient sound:</string>
    <string name="time_sensed">Time sensed:</string>
    <string name="detected_light_level">Light level:</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="no_value_chosen">No value chosen yet.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="trans_server_error">Server error</string>
    <string name="trans_client_error">Client error</string>
    <string name="trans_connection_error_detailed">We are currently experiencing some issues, please try again later.</string>
    <string name="trans_check_internet">Please check your internet connection.</string>
    <string name="pref_header_general">Profile</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Anonymous</string>
    <string name="pref_title_email">Contact email</string>
    <string name="pref_default_email_name">anonymous@email.si</string>
    <string name="pref_default_office_hours">08:00 - 16:00</string>
    <string name="pref_title_office_hours">My usual office hours</string>
    <string-array name="notifications_labels_array">
        <item>Up to 3 notifications</item>
        <item>Up to 5 notifications</item>
        <item>Remind me after every sensed task</item>
    </string-array>
    <string-array name="notifications_value_array">
        <item>3</item>
        <item>5</item>
        <item>-1</item>
    </string-array>
    <string-array name="participate_labels_array">
        <item>Participate</item>
        <item>Opt-out, keep collected anonymous data on server.</item>
        <item>Opt-out, delete all data on server.</item>
    </string-array>
    <string-array name="participate_value_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_participate">Participate in research</string>
    <string name="server_url">http://193.2.72.121</string>
    <string name="sensing">New task</string>
    <string name="daily_statistics_body_1">We have</string>
    <string name="daily_statistics_body_2">sensor readings of your activity during the day, of which you have labeled</string>
    <string name="daily_statistics_body_3">Your average task difficulty for today is</string>
    <string name="statistics_today_title">Your statistics for today</string>
    <string name="not_labeled">Not labeled</string>
    <string name="heat_map">Heat map</string>
    <string name="task_markers">Task markers</string>
    <string name="legend_num_non_labeled"># non-labeled tasks</string>
    <string name="legend_num_labeled"># labeled tasks</string>
    <string name="show_on_map">Show on map</string>
    <string name="show_in_list">Show in list</string>
    <string name="title_activity_list_data">Non-labeled tasks</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="anonymous_mail">anonymous@anonymous.com</string>
    <string name="not_vaid_email">Email is not valid.</string>
    <string name="press_once_more_to_exit">Press once more to exit app!</string>
    <string name="help">Help</string>
    <string name="task_descriptions">Task difficulties</string>
    <string name="pref_summary_participate">If you want to opt-out switch this off.</string>
    <string name="terms_of_use_text">By clicking \"I Agree\" below, I agree to participate in the TaskyApp
            study. \nThis application will collect data that samples my location, collocation with
            other Bluetooth and WiFi devices, connectivity type, phone screen and battery status, accelerometer and microphone amplitude readings.
            I understand that access to any data collected will only be allowed to FRI mobile computing
            research team and only for the purpose of conducting these experiments.
        \nAny published results of this study will only refer to anonymised and
            obfuscated data, and aggregated statistics that do not reveal the identities of the
            participants. As a participant I have the right to opt out of this study at any time during this
            experiment by uninstalling the application. Moreover, I have the right to access any
            information in the data set related to me, and request for any part of that data to be
            removed.
    </string>
    <string name="i_agree">I agree</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="no_location_data_available">No location data available</string>
    <string name="calendar_event">Event on your calendar:</string>
    <string name="wait_for_countdown">Wait for the countdown to complete.</string>
    <string name="start_sensing">Start sensing</string>
    <string name="label_tasks">Label tasks</string>
    <string name="label_task_title">How difficult was this task?</string>
    <string name="check_statistics">Check statistics</string>
    <string name="start_sense_task_difficulty">Task difficulty will be:</string>
    <string name="start_sense_start_after">starting after:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="label_more">Label more</string>
    <string name="daily_data">Daily data</string>
    <string name="your_last_2_days">Your last 2 days</string>
    <string name="no_tasks_to_label">There are no tasks to label! \n Check again later.</string>
    <string name="almost_done">Almost done!</string>
    <string name="about_contact">Contact</string>
    <string name="about_contact_description">If you have experienced any issues, or just want to give us a shout, you can reach us on email:\n<b>gu7668@student.uni-lj.si</b></string>
    <string name="time_range_too_short">Selected time range (%s) must be at least 4 hours.</string>
    <string name="sensing_running">Sensing running in background.</string>
    <string name="pref_header_office_hours">Office hours</string>
    <string name="pref_title_weekends_included">Weekends included</string>
    <string name="pref_default_office_weekend">false</string>
    <string name="notif_prize_reminder_message">Reminder! You can win a 50€ voucher.</string>
    <string name="mind_labeling_tasks_notification">Would you mind labelling your daily tasks?</string>
    <string name="explain_after_prize_notification_reward">Are you in office? Click start sensing to monitor you task. You have a change to win 50€.</string>
    <string name="info">INFO</string>
    <string name="not_in_office_today_notification">I am not in the office today</string>
    <string name="angel_sensor">Angel sensor</string>
    <string name="disabled_bluetooth_msg">Please enable bluetooth and click on "Scan".</string>
    <string name="scan">Scan</string>
    <string name="no_angel_sensors_found">No Angel Sensors found.</string>
    <string name="pair_angel_sensor">Pair an Angel Sensor</string>
</resources>