<!--
  ~ Copyright (c) 2016, University of Ljubljana, Slovenia
  ~
  ~ Gasper Urh, gu7668@student.uni-lj.si
  ~
  ~ This project was developed as part of the paper submitted for the UbitTention workshop (in conjunction with UbiComp'16) and my master thesis. For more information, please visit http://projects.hcilab.org/ubittention/
  ~
  ~ Permission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
  ~ THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general">
        <!--<EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="profile_name_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name"/>-->
        <EditTextPreference
            android:defaultValue="@string/pref_default_email_name"
            android:hint="@string/pref_default_email_name"
            android:inputType="textEmailAddress"
            android:key="profile_email_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_email"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/participate_labels_array"
            android:entryValues="@array/participate_value_array"
            android:key="participate_preference"
            android:title="How actively do you want to participate?"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/pref_header_office_hours">
        <EditTextPreference
            android:defaultValue="@string/pref_default_office_hours"
            android:hint="@string/pref_default_office_hours"
            android:inputType="datetime"
            android:key="profile_office_hours_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_office_hours"/>
        <SwitchPreference
            android:defaultValue="@string/pref_default_office_weekend"
            android:key="profile_office_hours_include_weekends"
            android:summary="Switch on if you are in office for weekends"
            android:title="@string/pref_title_weekends_included"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/notifications_labels_array"
            android:entryValues="@array/notifications_value_array"
            android:key="notifications_reminder_preference"
            android:summary="How many reminders would you like to get during your office hours?"
            android:title="Label task as they happen"/>

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone"/>

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate"/>
    </PreferenceCategory>


</PreferenceScreen>
