<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="si.uni_lj.fri.taskyapp.LabelTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/time_sensed"
            android:layout_width="0dp"
            android:gravity="center_vertical|start"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_task_time_sensed"
            android:layout_width="0dp"
            android:gravity="center_vertical|end"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:text="@string/detected_phone_activity"
            android:layout_width="0dp"
            android:gravity="center_vertical|start"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_detected_activity"
            android:layout_width="0dp"
            android:gravity="center_vertical|end"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/detected_ambient_sound"
            android:layout_width="0dp"
            android:gravity="center_vertical|start"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_detected_ambient_sound_level"
            android:layout_width="0dp"
            android:gravity="center_vertical|end"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/detected_light_level"
            android:layout_width="0dp"
            android:gravity="center_vertical|start"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_detected_ambient_light_level"
            android:layout_width="0dp"
            android:gravity="center_vertical|end"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>
    <fragment
        class="com.google.android.gms.maps.MapFragment"
        android:name="si.uni_lj.fri.taskyapp.LabelTaskActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/map_fragment"
        app:cameraZoom="13.5"
        android:layout_weight="7"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <com.github.channguyen.rsv.RangeSliderView
            android:id="@+id/rsv_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:filledColor="@color/primary"
            app:emptyColor="@color/divider"
            app:rangeCount="5"
            app:barHeightPercent="0.05"
            />

        <!--<Button
            android:id="@+id/btn_discard_task"
            android:layout_width="0dp"
            android:background="@color/red"
            android:text="@string/discard"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_label_task"
            android:layout_width="0dp"
            android:text="@string/label"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:entries="@array/task_complexities_array"
            android:prompt="@string/complexity_prompt"
            android:layout_weight="1"/>-->
    </LinearLayout>
</LinearLayout>
